# netsec-toolsbox

./: .gitignore  ADVANCED_FEATURES_IMPLEMENTATION.md  AI_GATEWAY_IMPLEMENTATION_GUIDE.md  AI_INTEGRATION_SUMMARY.md  MARKDOWN_FEATURES_CHECK.md  ONE_API_ARCHITECTURE_ANALYSIS.md  OPTIMIZATION_PLAN.md  README.md  SERVICE_ARCHITECTURE_OPTIMIZATION.md  WIKI_DESIGN.md  WIKI_IMPLEMENTATION.md  markdown-it.bundle.js  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.history/: MARKDOWN_FEATURES_20251219125131.md  MARKDOWN_FIXES_EXPLANATION_20251219155413.md  MARKDOWN_RENDERING_FIXES_20251219155413.md  OPTIMIZATION_SUMMARY_20251219160257.md  OPTIMIZATION_SUMMARY_20251221001056.md  OPTIMIZATION_SUMMARY_20251221001725.md  README_20251217152849.md  README_20251217153059.md  README_20251217193358.md  README_20251218232959.md  README_20251219123039.md  README_20251219123107.md  README_20251219192702.md  (+89 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.config/: categories.json  tools.json
src-tauri/src/: ai_service.rs  config.rs  file_ops.rs  icon_extractor.rs  launcher.rs  lib.rs  types.rs  utils.rs
src-tauri/src/ai_service/: legacy.rs  mod.rs  pool.rs  pool_optimized.rs  service_wrapper.rs
src-tauri/src/service/: circuit_breaker.rs  commands.rs  dto.rs  events.rs  health_check.rs  helpers.rs  lifecycle.rs  manager.rs  metrics.rs  mod.rs  sse_handler.rs  state.rs  state_transition.rs  trait_def.rs  websocket.rs
src-tauri/src/wiki/: commands.rs  http_server.rs  mod.rs  parser.rs  server.rs  types.rs
src-tauri/static/: wiki_index.html  wiki_styles.css
(+1985 files in other folders)
