[package]
name = "netsec-toolbox"
version = "0.1.0"
description = "Ne0XSec's Toolbox - A desktop application for managing and launching security tools"
authors = ["序章"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
image = "0.25"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
regex = "1.10"
url = "2.5"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_System_Com"] }
ico = "0.3"
uuid = { version = "1.0", features = ["v4"] }
urlencoding = "2.1"
